frontend/src/mycStyle.css
/* ... */
            .progressMenu > *:not(:last-child) {
                margin-bottom: 3rem;
            }
    /* step right */
        .projectStepContainer .stepRight {
            padding: 0;
            /* background: var(--c-edition-t2); */
            overflow: visible;
            /* temp - before i put the logos in */
            /* padding-bottom: calc(3 * var(--spacing-l)); */
        }
        /* desc and nav */
            .descAndNav {
                position: relative;
            }
            .descAndNav .text.desc {
                height: 16rem;
                max-height: 16rem;
                overflow: scroll;
            }
            .descAndNav .text.desc p:last-of-type {
                display: inline;
            }
            .descAndNav .text.desc .info-button {
                vertical-align: bottom;
            }
            .descAndNav .col-4 {
                display: flex;
                flex-flow: column nowrap;
                justify-content: space-between;
            }
            .descAndNav .nav {
                flex-flow: row nowrap;
                align-items: center;
                gap: var(--spacing-xxs);
                margin-left: 0;
                margin-right: 0;
            }
            .descAndNav .nav > * {
                padding-left: 0;
                padding-right: 0;
            }
            .descAndNav .prevNav,
            .descAndNav .nextNav {
                display: flex;
                flex-flow: row nowrap;
                flex: 1 1 0;
            }
            .descAndNav .prevNav button,
            .descAndNav .nextNav button {
                display: flex;
                flex-flow: row nowrap;
                white-space: nowrap;
                justify-content: center;
                width: 100%;
            }
        /* years horizontal tabs */
            ul.nav-tabs {
                --bs-nav-tabs-border-width: 0;
                --bs-nav-tabs-border-radius: 0;
                --bs-nav-tabs-link-active-color: var(--c-h0-s0-l1);
                --bs-nav-tabs-link-active-bg: var(--c-h1-s0-l4);
                border-bottom: 0;
            }
            ul.nav-tabs li.nav-item button {
                font-size: var(--t-fs-p3);
                font-weight: var(--t-fw-p-regular-bold);
                color: var(--c-h0-s0-l1);
                padding: 0.6rem 1rem;
                text-align: left;
                transition: none; /* the existing transition is nice but it does not exist in the steps nav and i prefer to stay coherent */
            }
            div.tab-content .tab-pane > hr {
                margin-top: -1rem; /* dirty fix */
                margin-bottom: 1.4rem;
            }
        /* user note */
            .projectStepContainer .user-note {
                font-size: var(--t-fs-p2);
                font-weight: var(--t-fw-p-mono);
                font-family: var(--t-ff-p-mono);
                color: var(--c-h0-s0-l1);
                margin-bottom: 0 !important;
            }
            .projectStepContainer .user-note .form-label {
                margin: 0;
                padding: 0;
                width: 100%;
            }
            .projectStepContainer .user-note-button {
                font-size: var(--t-fs-p3);
                font-weight: var(--t-fw-p-mono-bold);
                font-family: var(--t-ff-p-mono);
                color: var(--c-h0-s0-l3);
                width: 100%;
                height: var(--table-cell-height);
                padding: var(--table-cell-padding);
            }
            .projectStepContainer .user-note-button:hover,
            .projectStepContainer .user-note-button:focus,
            .projectStepContainer .user-note-button:active {
                background: var(--c-h0-s0-l5);  
            }
            .projectStepContainer .user-note .form-control {
                min-height: 20rem;
            }




/* overflows fading out */
    /* horizontal overflows */
        .recharts-wrapper ul.recharts-default-legend:after {
            content: "";
            position: absolute;
            right: 0;  
            height: 100%;
            width: var(--spacing-l);
            content: "";
            background: linear-gradient(to left, var(--c-h0-s0-l5), transparent);
            pointer-events: none; /* so the text is still selectable */
        }
    /* vertical overflows */
        .masked-overflow-y::-webkit-scrollbar{
            display: none;
          
        }
/* ... */

